chore: actualiza dependencias de Maven